// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumPickerNumDisplay snapshots should render with default html 1`] = `
<div
  class="npnd-perimeter-container"
>
  <p
    class="picker-title"
  >
    teams
  </p>
   
  <p
    class="npnd-num"
  >
    0
  </p>
</div>
`;

exports[`NumPickerNumDisplay snapshots should set number prop 1`] = `
<div
  class="npnd-perimeter-container"
>
  <p
    class="picker-title"
  >
    teams
  </p>
   
  <p
    class="npnd-num"
  >
    5
  </p>
</div>
`;

exports[`NumPickerNumDisplay snapshots should set pickerType prop 1`] = `
<div
  class="npnd-perimeter-container"
>
  <p
    class="picker-title"
  >
    players
  </p>
   
  <p
    class="npnd-num"
  >
    0
  </p>
</div>
`;
